--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     24 years old, Minsk
                 </p>
             </div>
-            <img src="resources/author_photo.png" alt="Фото Дениса Новика">
+            <div class="photo_author"></div>
         </section>
         <section class="about_me" id="about_me">
             <section class="about_me_text">
