--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
 </head>
 <body>
     <header>
-        <a href="#" class="header__link">Home</a>
-        <a href="#about_me" class="header__link">About me</a>
-        <a href="#skills" class="header__link">Skills</a>
-        <a href="#portfolio" class="header__link">Portfolio</a>
-        <a href="#contacts" class="header__link">Contacts</a>
+        <div class="header_links">
+            <a href="#" class="header__link">Home</a>
+            <a href="#about_me" class="header__link">About me</a>
+            <a href="#skills" class="header__link">Skills</a>
+            <a href="#portfolio" class="header__link">Portfolio</a>
+            <a href="#contacts" class="header__link">Contacts</a>
+        </div>
     </header>
     <main>
         <section class="first_view">
