--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
 
     <link rel="stylesheet" href="styles/styles.css">
     <title>Denis Novik</title>
+    <script src="index.js"></script>
 </head>
 <body>
-    <header>
+    <header class="header">
+        <div class="header__burger-btn" id="burger">
+            <span></span><span></span><span></span>
+        </div>
         <div class="header_links">
             <a href="#" class="header__link">Home</a>
             <a href="#about_me" class="header__link">About me</a>
